# arcdps-legacy-loader

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml  pages.yml
cmake/: GitVersion.cmake
cmake/toolchains/: mingw-w64-x86_64.cmake
def/: arcdps_legacy_loader.def
docs/: addons.js  index.html
include/arcdps/: arcdps_structs.h
src/: dllmain.cpp  exports.cpp  version.h.in  version.rc.in
src/addon/: addon_manager.cpp  addon_manager.h  legacy_addon.cpp  legacy_addon.h
src/config/: config.cpp  config.h
src/imgui_legacy/: arc_style_apply.cpp  arc_style_apply.h  arc_style_reader.cpp  arc_style_snapshot.h  arc_windows_mirror.cpp  arc_windows_mirror.h  arc_windows_reader.cpp  arc_windows_snapshot.h  context.cpp  context.h
src/logging/: log.cpp  log.h
src/proxy/: arcdps_proxy.cpp  arcdps_proxy.h
src/ui/: settings_window.cpp  settings_window.h
